--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "vinillaHelper",
-  "main": "vanillaHelper",
+  "main": "vanillaHelper.js",
   "homepage": "https://github.com/arctelix/vanillaHelper",
   "authors": [
     "arctelix <arctelix@gmail.com>"
