--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "vinillaHelper",
+  "name": "vanillaHelper",
   "main": "vanillaHelper.js",
   "homepage": "https://github.com/arctelix/vanillaHelper",
   "authors": [
