Updated bower.json ignore

--- a/bower.json
+++ b/bower.json
@@ -13,14 +13,7 @@
   ],
   "license": "MIT",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests",
-    "bower.json",
-    "docs",
-    "LICENSE",
-    "README.md"
+    "*",
+    "dist/*"
   ]
 }
